add oh cloudinary

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,5 +10,9 @@
     </p>
   <% end %>
 </div>
+<%= cl_image_tag("san_francisco_qbib6g",
+      width: 400, height: 300, crop: :fill) %>
+<%= cl_image_tag("boris_retreat_2017_adgwwr.jpg",
+      width: 150, height: 150, crop: :thumb, gravity: :face)  %>
 
 <%= link_to "New article", new_article_path %>
